--- a/main_app/templates/articles/index.html
+++ b/main_app/templates/articles/index.html
@@ -52,7 +52,7 @@
         <span id="likeCount">{{ article.likes }}</span>
       </div>           
       {% endif %} 
-      <hr />
+      <hr class="index-line" />
     </div>
   {% endfor %}
 </section>
