--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -18,12 +18,13 @@
 </head>
 <body>
   <header>
-    <div class="header-logo-container">
+    <div class="header-logo-container circle">
       <a href="/">
         <p id="main-heading">The Journal</p>
       </a>
     </div> 
     <nav>
+      <hr class="nav-line" />
       <ul>
         {% if user.is_authenticated %}
           {% if user.is_superuser %}
@@ -31,7 +32,7 @@
           {% endif %}
           <li><a href="{% url 'article-index' %}">Articles</a></li>
           <li><a href="{% url 'about' %}">About</a></li>
-          <li><a href="{% url 'logout' %}">Log out</a></li>
+          <li><a href="{% url 'logout' %}">Log Out</a></li>
         {% else %}
           <li><a href="{% url 'article-index' %}">Articles</a></li>
           <li><a href="{% url 'about' %}">About</a></li>
@@ -47,6 +48,7 @@
           <li><a href="{% url 'signup' %}">Sign Up</a></li> {% endcomment %}
         {% endif %}
       </ul>
+      <hr class="nav-line" />
     </nav>    
   </header>
   <main>
