add css style to sign up page

--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -1,4 +1,13 @@
 #landingVideo {
-  width: 100%;
+  width: 90%;
   height: auto; 
+  object-fit: cover; 
+}
+
+.landingVideo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  overflow: hidden;
 }
