--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -7,31 +7,10 @@
 
 {% block content %}
 
-{% comment %} {% if not user.is_authenticated %}
-  <section>
-    <form action="{% url 'home' %}" method="post" class="login">
-      <h1>Login</h1>
-      {% csrf_token %}
-      {{ form.as_p }}
-      <input type="hidden" name="next" value="{{ next }}">
-      <button type="submit" class="btn submit">Login</button>
-    </form>
-  </section>
-{% endif %} {% endcomment %}
 
-{% comment %} <video id="landingVideo" autoplay muted loop src="{% static 'images/landing.mov' %}"></video> {% endcomment %}
+<div class="landingVideo">
+  <video id="landingVideo" autoplay muted loop src="{% static 'images/landing1.mov' %}"></video> 
+</div>
 
-<video id="landingVideo" autoplay muted loop src="{% static 'images/landing1.mov' %}"></video> 
-
-
-{% comment %} <section>
-  <form action="{% url 'home' %}" method="post" class="login">
-    <h1>Login</h1>
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="hidden" name="next" value="{{ next }}">
-    <button type="submit" class="btn submit">Login</button>
-  </form>
-</section> {% endcomment %}
 
 {% endblock %}
