--- a/main_app/static/css/form.css
+++ b/main_app/static/css/form.css
@@ -10,12 +10,14 @@
   margin: 0 auto;
 }
 
-#signup {
+#signup,
+#login {
   font-size: 25px;
   padding-top: 30%;
 }
 
-.signupform-container {
+.signupform-container,
+.login {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -54,7 +56,7 @@ table td input {
   outline: none;
   border: solid 0.5px black;
   /* padding: 20px; */
-  padding: 15px;
+  padding: 10px;
   margin: 0 auto;
   /* border-radius: 50%; */
   font-family: 'FONTSPRING DEMO - The Seasons Light', sans-serif; 
@@ -62,6 +64,7 @@ table td input {
   font-style: italic;
   font-weight: 300;
   text-align: center;
+  box-shadow: 0px 0px 16px 5px rgba(0,0,0,0.1);
 }
 
 table td input:focus {
@@ -73,7 +76,8 @@ table td input:focus {
   font-style: italic;
 }
 
-#signup-button {
+#signup-button,
+#login-button {
   background-color: transparent;
   border: solid 0.5px black;
   border-radius: 50%;
@@ -87,6 +91,18 @@ table td input:focus {
 #signup-button:hover {
   color: #64613e;
   border: solid 0.5px #64613e;
+  box-shadow: 0px 0px 26px 3px rgba(0,0,0,0.1);
+  color: black;
+}
+
+#login-button:hover {
+  box-shadow: 0px 0px 26px 3px rgba(0,0,0,0.1);
+  color: black;
+  border: solid 0.5px #64613e;
+}
+
+#login-button {
+  margin-top: 20px;
 }
 
 p.red-text {
@@ -95,4 +111,55 @@ p.red-text {
   font-style: italic;
   padding-top: 30px;
   padding-bottom: 5px;
+}
+
+#login-form {
+  width: 100%;
+  text-align: center;
+  background-image: url(../images/login.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center; 
+  width: 320px; 
+  height: 320px; 
+  margin: 0 auto;
+}
+
+#login-form input {
+  height: 10px;
+  /* width: 150px; */
+  width: 130px;
+  background-color: transparent;
+  outline: none;
+  border: solid 0.5px black;
+  /* padding: 20px; */
+  padding: 8px;
+  margin: 0 auto;
+  /* border-radius: 50%; */
+  font-family: 'FONTSPRING DEMO - The Seasons Light', sans-serif; 
+  font-size: 13px;
+  font-style: italic;
+  font-weight: 300;
+  text-align: center;
+  box-shadow: 0px 0px 16px 5px rgba(0,0,0,0.1);
+}
+
+#login-form input,
+#login-form label {
+  margin-top: 10px;
+}
+
+#signup-link {
+  font-style: italic;
+}
+
+#signup-link a {
+  text-decoration: none;
+  color: black;
+  border-bottom: solid 0.5px black;
+}
+
+#signup-link a:hover {
+  color: #64613e;
+  border-bottom: solid 0.5px #64613e;
 }
