--- a/main_app/templates/login.html
+++ b/main_app/templates/login.html
@@ -8,19 +8,20 @@
 {% block content %}
 
 <div class="page-header">
-  <h1>Log In</h1>
+  <p id='login'>Login</p>
+  {% if form.errors %}
+    <p class="red-text">Invalid login - try again</p>
+  {% endif %}
 </div>
-{% if form.errors %}
-  <p class="red-text">Invalid log in - try again</p>
-{% endif %}
-<section>
+<section id='login-form'>
   <form action="{% url 'login' %}" method="post" class="login">
     {% csrf_token %}
     {{ form.username.label_tag }} {{ form.username }}
     {{ form.password.label_tag }} {{ form.password }}
-    <button type="submit" class="btn submit">Login</button>
+    <button type="submit" id='login-button' class="btn submit">Login</button>
   </form>
-  <p>Don't have an account yet? <a href="{% url 'signup' %}">Sign up here</a></p>
+  <p id='signup-link'>Don't have an account yet? <a href="{% url 'signup' %}">
+    <br> Sign Up
 </section>
 
 {% endblock %}
