--- a/main_app/static/css/form.css
+++ b/main_app/static/css/form.css
@@ -16,6 +16,12 @@
   padding-top: 30%;
 }
 
+#create-article,
+#edit-article {
+  font-size: 20px;
+  padding-top: 30%;
+}
+
 .signupform-container,
 .login {
   display: flex;
@@ -23,6 +29,47 @@
   align-items: center;
   justify-content: center;
   height: 30vh;
+}
+
+.create-form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 40vh;
+}
+
+#create-article-table {
+  width: 100%;
+}
+
+#create-article-table td {
+  width: 50%; 
+  box-sizing: border-box;
+  padding: 5px;
+}
+
+#create-article-table textarea {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.create-form-container textarea {
+  font-family: 'FONTSPRING DEMO - The Seasons Light', sans-serif; 
+  font-size: 13px;
+  resize: none; 
+  overflow-y: scroll; 
+  max-height: 130px; 
+  background-color: transparent;
+  outline: none;
+  border: solid 0.5px #64613e;
+  box-shadow: 0px 0px 16px 5px rgba(0,0,0,0.1);
+}
+
+.create-form-container textarea:focus {
+  outline: none;
+  font-style: italic;
 }
 
 table {
@@ -77,7 +124,8 @@ table td input:focus {
 }
 
 #signup-button,
-#login-button {
+#login-button,
+#create-button {
   background-color: transparent;
   border: solid 0.5px black;
   border-radius: 50%;
@@ -89,13 +137,18 @@ table td input:focus {
 }
 
 #signup-button:hover {
-  color: #64613e;
   border: solid 0.5px #64613e;
   box-shadow: 0px 0px 26px 3px rgba(0,0,0,0.1);
   color: black;
 }
 
 #login-button:hover {
+  box-shadow: 0px 0px 26px 3px rgba(0,0,0,0.1);
+  color: black;
+  border: solid 0.5px #64613e;
+}
+
+#create-button:hover {
   box-shadow: 0px 0px 26px 3px rgba(0,0,0,0.1);
   color: black;
   border: solid 0.5px #64613e;
