--- a/main_app/templates/main_app/article_form.html
+++ b/main_app/templates/main_app/article_form.html
@@ -9,20 +9,23 @@
 
 <div class="page-header">
   {% if article %}
-    <h1>Edit {{ article.title }}</h1>
+    <p id='edit-article'>Edit Article</p>
   {% else %}
-    <h1>Add an Article</h1>
+    <p id='create-article'>Create Article</p>
   {% endif %}
 </div>
-<form action="" method="post" class="form-container">
+<form action="" method="post" class="create-form-container">
   {% csrf_token %}
-  <table>
-    {% comment %}
-      Render the inputs inside of <tr>s & <td>s
-    {% endcomment %}
+  <table id='create-article-table'>
     {{ form.as_table }}
   </table>
-  <button type="submit" class="btn submit">Submit!</button>
+  <button type="submit" id='create-button' class="btn submit">
+    {% if article %}
+      Update
+    {% else %}
+      Create
+    {% endif %}
+  </button>
 </form>
 
 {% endblock %}
