--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -84,3 +84,66 @@ hr.nav-line {
   border-width: 0.1px; 
   width: 80%; 
 }
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 25vh;
+}
+
+#delete-confirm,
+#delete-question {
+  text-align: center;
+}
+
+#delete-confirm {
+  padding-bottom: 5px;
+  border-bottom: solid 0.5px black;
+  font-size: 20px;
+}
+
+.form-delete {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-delete a {
+  text-decoration: none;
+  background-color: transparent;
+  border: solid 0.5px black;
+  border-radius: 50%;
+  padding: 9px 20px;
+  cursor: pointer;
+  color: black;
+  font-size: 14px;
+  width: 52px;
+  text-align: center;
+  margin-right: 10px;
+  padding-top: 8px;
+}
+
+.form-delete a:hover {
+  box-shadow: 0px 0px 26px 3px rgba(0,0,0,0.1);
+  color: black;
+  border: solid 0.5px #64613e;
+}
+
+#delete-button{
+  background-color: transparent;
+  border: solid 0.5px black;
+  border-radius: 50%;
+  padding: 10px 20px;
+  cursor: pointer;
+  color: black;
+  font-family: 'FONTSPRING DEMO - The Seasons Light', sans-serif; 
+  text-transform: capitalize;
+}
+
+#delete-button:hover {
+  box-shadow: 0px 0px 26px 3px rgba(0,0,0,0.1);
+  color: black;
+  border: solid 0.5px #64613e;
+}
