--- a/main_app/static/css/form.css
+++ b/main_app/static/css/form.css
@@ -95,17 +95,17 @@ table td li {
 }
 
 table td input {
-  /* height: 15px; */
-  height: 10px;
-  /* width: 150px; */
-  width: 130px;
+  height: 15px;
+  /* height: 10px; */
+  width: 150px;
+  /* width: 130px; */
   background-color: transparent;
   outline: none;
   border: solid 0.5px black;
-  /* padding: 20px; */
-  padding: 10px;
+  padding: 20px;
+  /* padding: 10px; */
   margin: 0 auto;
-  /* border-radius: 50%; */
+  border-radius: 50%;
   font-family: 'FONTSPRING DEMO - The Seasons Light', sans-serif; 
   font-size: 13px;
   font-style: italic;
