--- a/main_app/templates/main_app/article_confirm_delete.html
+++ b/main_app/templates/main_app/article_confirm_delete.html
@@ -3,20 +3,19 @@
 
 {% block content %}
 
-<div class="page-header">
-  <h1>Delete Article?</h1>
-</div>
-<h2>Are you sure you want to delete {{ article.title }}?</h2>
+<div class="page-container">
+  <div class="page-header">
+    <p id='delete-confirm'>Delete Article</p>
+    <p id='delete-question'>Are you sure you want to delete article?</p>
+  </div>
 
-<form action="" method="post" class="form">
-  {% csrf_token %}
-  <a 
-    href="{% url 'article-detail' article.id %}" 
-    class="btn secondary"
-  >
-    Cancel
-  </a>
-  <button type="submit" class="btn danger">Yes - Delete!</button>
-</form>
+  <form action="" method="post" class="form-delete">
+    {% csrf_token %}
+    <div class="button-container">
+      <a href="{% url 'article-detail' article.id %}" class="btn secondary">Cancel</a>
+      <button type="submit" id='delete-button' class="btn danger">Delete</button>
+    </div>
+  </form>
+</div>
 
 {% endblock %}
