add css style to home page

--- a/main_app/static/css/articles/article-detail.css
+++ b/main_app/static/css/articles/article-detail.css
@@ -229,3 +229,11 @@
 #file-name {
   font-size: 13px;
 }
+
+p#landing-video-detail {
+  font-family: 'BDScript-Regular', sans-serif; 
+  font-size: 30px;
+  line-height: 1;
+  text-align: right;
+  margin: 0 50px;
+}
