--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -30,6 +30,8 @@
   <img class="about-img" src="{% static 'images/about3.jpg' %}" alt="image" />
 </div>
 <hr id='about-hr' />
+<p id='landing-video-about'>The journal</p>
+<hr id='about-hr' />
 
 {% endblock %}
 
