--- a/main_app/templates/articles/detail.html
+++ b/main_app/templates/articles/detail.html
@@ -115,7 +115,9 @@
     </div> 
 
 
-    <hr class="line" />   
+    <hr id='detail-hr' />   
+    <p id='landing-video-detail'>The journal</p>
+    <hr id='detail-hr' />
   </div>
 </section>
 
