--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -6,8 +6,120 @@
 
 .landingVideo {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 50vh;
+  height: 40vh;
   overflow: hidden;
+}
+
+p#landing-video-home {
+  font-family: 'BDScript-Regular', sans-serif; 
+  font-size: 30px;
+  line-height: 1;
+  text-align: right;
+  margin: 5px 70px;
+}
+
+#dot-line {
+  font-size: 8px;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.about-section,
+.articles-section {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
+}
+
+.articles-section {
+  margin-left: 80px;
+}
+
+.about-pics,
+.articles-pics {
+  flex: 3;
+  display: flex;
+  justify-content: center;
+  margin-right: 0;
+}
+
+.about-link,
+.articles-link {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-right: 150px;
+}
+
+.articles-link {
+  margin-left: 150px;
+}
+
+p#learn-more {
+  font-family: 'FONTSPRING DEMO - The Seasons Light', sans-serif; 
+  font-size: 45px;
+  line-height: 1;
+  text-align: center;
+  margin: 0 auto;
+  padding-top: 50px;
+}
+
+.about-link a {
+  font-family: 'MADE TheArtist Script', sans-serif; 
+  font-size: 25px;
+  text-decoration: none;
+  color: black;
+  text-align: center;
+  padding: 5px;
+  margin: 0 auto;
+}
+
+.about-link a:hover {
+  border-bottom: solid 0.5px black;
+}
+
+.about-pics img,
+.articles-img img {
+  max-width: 100%;
+}
+
+#first-pic {
+  padding-top: 25%;
+  margin-right: 0;
+}
+
+#articles {
+  font-family: 'BDScript-Regular', sans-serif; 
+  font-size: 35px;
+}
+
+#arrow {
+  width: 60px;
+  height: 13px;
+  transition: transform 0.2s; 
+}
+
+#arrow:hover {
+  transform: scale(1.2); 
+}
+
+#article-pic2 {
+  max-width: 50vh;
+}
+
+p#landing-video-landing {
+  font-family: 'BDScript-Regular', sans-serif; 
+  font-size: 30px;
+  line-height: 1;
+  text-align: right;
+  margin: 0 50px;
+}
+
+#landing-hr1 {
+  margin-top: 50px;
 }
