--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -97,6 +97,10 @@ hr.nav-line {
   height: 25vh;
 }
 
+form.login {
+  margin-top: -7%;
+}
+
 #delete-confirm,
 #delete-question {
   text-align: center;
