--- a/main_app/templates/main_app/article_confirm_delete.html
+++ b/main_app/templates/main_app/article_confirm_delete.html
@@ -6,7 +6,7 @@
 <div class="page-container">
   <div class="page-header">
     <p id='delete-confirm'>Delete Article</p>
-    <p id='delete-question'>Are you sure you want to delete article?</p>
+    <p id='delete-question'>This action cannot be undone. <br> Delete article?</p>
   </div>
 
   <form action="" method="post" class="form-delete">
