--- a/main_app/templates/main_app/article_form.html
+++ b/main_app/templates/main_app/article_form.html
@@ -27,5 +27,8 @@
     {% endif %}
   </button>
 </form>
+<hr id='detail-hr' />   
+<p id='create-paragraph'>The journal</p>
+<hr id='detail-hr' />
 
 {% endblock %}
