--- a/main_app/static/css/articles/article-index.css
+++ b/main_app/static/css/articles/article-index.css
@@ -127,6 +127,12 @@ hr.index-line {
   border-right: solid 1px #ccc;
 }
 
+.topic {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 18px;
+  width: 150px;
+}
+
 .read-p {
   cursor: pointer;
   padding-top: 20px;
