--- a/main_app/templates/articles/detail.html
+++ b/main_app/templates/articles/detail.html
@@ -18,6 +18,7 @@
       <h1>{{ article.title }}</h1>
     </div>
     <div class="date">
+      <p class="topic"><small>{{ article.topic}}</small></p>
       <p class="created"><small>{{ article.created_at|date:"m.d.Y" }}</small></p>
     </div>
     <div class="content-main">
