--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -55,6 +55,13 @@ p#landing-video-home {
   align-items: center;
   margin-right: 150px;
 }
+.about-pics {
+  margin-left: 20%;
+}
+
+.about-link {
+  margin-left: 25%;
+}
 
 .articles-link {
   margin-left: 150px;
@@ -86,11 +93,17 @@ p#learn-more {
 .about-pics img,
 .articles-img img {
   max-width: 100%;
+  height: 100%;
 }
 
 #first-pic {
   padding-top: 25%;
   margin-right: 0;
+  margin-bottom: 0;
+}
+
+img#second-pic {
+  margin-bottom: 20px;
 }
 
 #articles {
@@ -122,4 +135,167 @@ p#landing-video-landing {
 
 #landing-hr1 {
   margin-top: 50px;
+}
+
+@media (min-width: 1853px){
+  #landingVideo {
+    width: 70%;
+    height: auto; 
+  }
+
+  .landingVideo {
+    height: 60vh;
+  }
+
+  p#landing-video-home {
+    font-size: 40px;
+    margin: 8px 350px;
+  }
+
+  #dot-line {
+    margin-top: 20px;
+  }
+
+  .about-section,
+  .articles-section {
+    margin-top: 50px;
+  }
+
+
+  .about-link,
+  .articles-link {
+    max-width: 50%;
+    margin-right: 500px;
+  }
+
+  .articles-link {
+    margin-left: 0;
+  }
+
+  p#learn-more {
+    font-size: 55px;
+    padding-top: 80px;
+    margin-left: 0;
+  }
+
+  .about-link a {
+    font-size: 30px;
+    margin-right: 180px;
+  }
+
+  #first-pic {
+    padding-top: 20%;
+  }
+
+  #articles {
+    font-size: 45px;
+  }
+
+  #arrow {
+    width: 70px;
+    height: 15px;
+    padding-right: 250px;
+  }
+
+  #article-pic2 {
+    max-width: 60vh;
+  }
+
+  p#landing-video-landing {
+    font-size: 35px;
+    margin: 0 70px;
+  }
+
+  #landing-hr1 {
+    margin-top: 70px;
+  }
+}
+
+
+@media (max-width: 414px) and (max-height: 896px) {
+  #landingVideo {
+    width: 100%;
+  }
+
+  .landingVideo {
+    height: auto;
+    min-height: 20vh;
+  }
+
+  p#landing-video-home {
+    font-size: 20px;
+    margin: 5px 20px;
+  }
+
+  p#dot-line {
+    width: 400px;
+    font-size: 6px;
+    margin-top: 20px;
+    overflow: hidden;
+  }
+
+  .about-section,
+  .articles-section {
+    margin-top: 30px;
+  }
+
+  .about-section,
+  .articles-section {
+    max-height: 250px;
+  }
+
+  .articles-section {
+    margin-left: 20px;
+  }
+
+  .about-link,
+  .articles-link {
+    margin-right: 20px;
+    /* margin: 0 auto; */
+  }
+
+  .about-pics img,
+  .articles-img img {
+    max-width: 100%;
+    max-height: 90%;
+  }
+
+  p#learn-more {
+    font-size: 20px;
+  }
+
+  .about-link a {
+    font-size: 15px;
+  }
+
+  #articles {
+    font-size: 30px;
+  }
+
+  .articles-link {
+    margin: 0 auto;
+  }
+
+  .articles-pics {
+    max-width: 50%;
+  }
+
+  #arrow {
+    width: 50px;
+    height: 10px;
+  }
+
+  #article-pic2 {
+    max-width: 40vh;
+  }
+
+  p#landing-video-landing {
+    font-size: 20px;
+    margin: 0 30px;
+  }
+
+  #landing-hr1 {
+    margin-top: 30px;
+  }
+
 }
