--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <link
     rel="shortcut icon"
     type="image/png"
@@ -17,7 +17,7 @@
   {% endblock %}
 </head>
 <body>
-  <header>
+  <header id='main-header'>
     <div class="header-logo-container circle">
       <a href="/">
         <p id="main-heading">The Journal</p>
@@ -42,10 +42,6 @@
               alt="User"
             >
           </a></li>
-          {% comment %} <li><a href="{% url 'signup' %}">Sign Up</a></li> {% endcomment %}
-  
-          {% comment %} <li><a href="{% url 'home' %}">Login</a></li>
-          <li><a href="{% url 'signup' %}">Sign Up</a></li> {% endcomment %}
         {% endif %}
       </ul>
       <hr class="nav-line" />
