--- a/main_app/static/css/articles/article-index.css
+++ b/main_app/static/css/articles/article-index.css
@@ -1,32 +1,3 @@
-/* .card-container {
-  padding: 0 30px;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.card {
-  width: 275px;
-  margin: 10px;
-}
-
-.card-content {
-  padding: 10px;
-  width: 100%;
-}
-
-.card > a {
-  text-decoration: none;
-}
-
-.card h2 {
-  margin: 10px 0;
-}
-
-.card p {
-  margin: 5px 0;
-} */
-
 .page-header {
   text-align: center;
   margin-top: 0;
@@ -49,10 +20,6 @@
   width: 22%; 
   min-height: 300px; 
   margin-bottom: 20px;
-  /* border: 1px solid #ccc; */
-  /* border-radius: 8px; */
-  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
-  /* background-color: #fff; */
   padding-bottom: 15px;
 }
 
@@ -105,8 +72,6 @@
 }
 
 #likeButton {
-  /* cursor: pointer;
-  transition: transform 0.2s;  */
   width: 15px;
   height: 15px;
   margin-left: 20px;
@@ -144,3 +109,79 @@ hr.index-line {
   color: #64613e;
   width: 85px;
 } 
+
+@media (max-width: 414px) and (max-height: 896px) {
+  
+  .page-header p {
+    font-size: 30px;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .card-container {
+    justify-content: space-between;
+    overflow: hidden;
+  }
+
+  .card {
+    width: 30%;
+  }
+
+  
+  .card-title {
+    font-size: 15px;
+    margin-top: 5px;
+    margin-bottom: 3px;
+  }
+  
+
+  .card-content p {
+    margin: 0;
+  }
+  
+  
+  #likeButton {
+    width: 10px;
+    height: 10px;
+    margin-left: 20px;
+  }
+  
+  hr.index-line {
+    height: 0.5px; 
+    background-color: black;
+    border: none;
+    width: 80%;
+    margin-top: 10px; 
+  }
+  
+  .created {
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 10px;
+    width: 50px;
+    border-right: solid 1px #ccc;
+  }
+  
+  .topic {
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 13px;
+    width: 90px;
+  }
+  
+  .read-p {
+    cursor: pointer;
+    padding-top: 20px;
+    font-size: 13px;
+  }
+
+}
+
+@media (min-width: 1853px){
+  .card {
+    width: 20%;
+  }
+
+  .card-container {
+    width: 50%;
+    margin: 0 auto;
+  }
+}
