add transition animation to home page

--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -180,7 +180,7 @@ p#landing-video-landing {
 
   .about-link a {
     font-size: 30px;
-    margin-right: 180px;
+    text-align: center;
   }
 
   #first-pic {
@@ -298,4 +298,26 @@ p#landing-video-landing {
     margin-top: 30px;
   }
 
+}
+
+/* animation */
+
+.landingPage.slide-out {
+  animation: slideOut 1s forwards;
+}
+
+@keyframes slideOut {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+    display: none;
+  }
+}
+
+.slide-in {
+  transform: translateX(-100%);
+  transition: transform 0.5s;
+  opacity: 0;
 }
