--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -13,6 +13,7 @@
   >
   <title>The Journal</title>
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+  <script defer src="{% static 'js/transition.js' %}"></script>
   {% block head %}
   {% endblock %}
 </head>
