--- a/main_app/templates/articles/detail.html
+++ b/main_app/templates/articles/detail.html
@@ -116,7 +116,7 @@
     </div> 
 
 
-    <hr id='detail-hr' />   
+    <hr id='detail-hr' class='first-hr' />   
     <p id='landing-video-detail'>The journal</p>
     <hr id='detail-hr' />
   </div>
